[package]
name = "radior"
version = "0.4.1"
authors = ["nico <nicos.letters@gmail.com>"]
edition = "2018"
description = "At last, another radio on the command line."
repository = "https://github.com/sirno/radior"
license = "MIT"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
derive_more = "0.99.17"
libmpv-sirno = "2.0.2-fork.1"
shellexpand = "2.1.2"
toml = "0.5.9"
url = "2.3.1"

[dependencies.cursive]
version = "0.21.1"
default-features = false
features = ["termion-backend"]

[build-dependencies]
pkg-config = "0.3.26"
